--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "prisma": "^5.15.0"
   }
 }
