--- a/api/.env
+++ b/api/.env
@@ -4,5 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://kaustubkarki:s7pki0EuAOO03iF7@cluster0.ytil9t6.mongodb.net/noBuy?retryWrites=true&w=majority&appName=Cluster0
-"
+DATABASE_URL=mongodb+srv://kaustubkarki:kaustubkarki@cluster0.fsig7oy.mongodb.net/rState?retryWrites=true&w=majority&appName=Cluster0
