--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "nodemon": "^3.1.2",
