--- a/api/.env
+++ b/api/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=mongodb+srv://kaustubkarki:kaustubkarki@cluster0.fsig7oy.mongodb.net/rState?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY= skunfdb+asdkjfbnv*kpnuidf
+NODE_ENV=Development
