--- a/api/.env
+++ b/api/.env
@@ -7,3 +7,4 @@
 DATABASE_URL=mongodb+srv://kaustubkarki:kaustubkarki@cluster0.fsig7oy.mongodb.net/rState?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY= skunfdb+asdkjfbnv*kpnuidf
 NODE_ENV=Development
+CLIENT_URL=http://localhost:5173
